--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 Help center access
                             </li>
                         </ul>
-                        <button class="btn btn-lg btn-block btn-primary" type="button">
+                        <button class="btn btn-lg btn-block btn-outline-primary" type="button">
                             Sign up for free
                         </button>
                     </div>
