--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
             <title>
                 Document
             </title>
-            <script src="scripts.js" type="text/javascript">
-            </script>
+           
             <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
                 <link href="style.css" rel="stylesheet">
                 </link>
@@ -75,7 +74,7 @@
                                 Help center access
                             </li>
                         </ul>
-                        <button class="btn btn-lg btn-block btn-outline-primary" type="button">
+                        <button id="btn-1" class="btn btn-lg btn-block btn-outline-primary" type="button">
                             Sign up for free
                         </button>
                     </div>
@@ -107,7 +106,7 @@
                                 Help center access
                             </li>
                         </ul>
-                        <button class="btn btn-lg btn-block btn-primary" type="button">
+                        <button id="btn-2" class="btn btn-lg btn-block btn-primary" type="button">
                             Get started
                         </button>
                     </div>
@@ -139,7 +138,7 @@
                                 Help center access
                             </li>
                         </ul>
-                        <button class="btn btn-lg btn-block btn-primary" type="button">
+                        <button id="btn-3" class="btn btn-lg btn-block btn-primary" type="button">
                             Get started
                         </button>
                     </div>
@@ -247,5 +246,7 @@
                 </div>
             </footer>
         </div>
+         <script src="scripts.js" type="text/javascript">
+            </script>
     </body>
 </html>
