--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 Steal The Look
             </span>
             <nav class="my-2 my-md-0 mr-md-3 text">
-                <a class="p-2 text-dark" href="#">
-                    Features
+                <a class="p-2 text-dark" href="users.html">
+                    Users
                 </a>
                 <a class="p-2 text-dark" href="#">
                     Enterprise
@@ -34,9 +34,7 @@
                     Sign up
                 </a>
             </nav>
-        </div>
-
-        
+        </div>       
         <div class="container">
             <div class="pricing-header p-3 text-center">
                 <h1 class="display-4">
@@ -246,7 +244,7 @@
                 </div>
             </footer>
         </div>
-         <script src="scripts.js" type="text/javascript">
-            </script>
+         <script src="scripts.js" type="text/javascript"></script>
+
     </body>
 </html>
