atualizado estrutura do blog para criação de novo site

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
             <title>
                 Document
             </title>
-           
             <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
                 <link href="style.css" rel="stylesheet">
                 </link>
@@ -13,238 +12,79 @@
         </meta>
     </head>
     <body>
-        <div class="navbar navbar-light bg-light shadow-sm align-items-center">
-            <span class="navbar-brand mb-0 h1">
-                Steal The Look
-            </span>
-            <nav class="my-2 my-md-0 mr-md-3 text">
-                <a class="p-2 text-dark" href="users.html">
-                    Users
-                </a>
-                <a class="p-2 text-dark" href="#">
-                    Enterprise
-                </a>
-                <a class="p-2 text-dark" href="#">
-                    Support
-                </a>
-                <a class="p-2 text-dark" href="#">
-                    Pricing
-                </a>
-                <a class="btn btn-outline-primary" href="#">
-                    Sign up
-                </a>
-            </nav>
-        </div>       
-        <div class="container">
-            <div class="pricing-header p-3 text-center">
-                <h1 class="display-4">
-                    Pricing
-                </h1>
-                <p class="lead">
-                    Quickly build an effective pricing table for your potential customers with this Bootstrap example. It's built with default Bootstrap components and utilities with little customization.
-                </p>
-            </div>
-            <div class="card-deck text-center">
-                <div class="card">
-                    <div class="card-header">
-                        <h4 class="card-title font-weight-normal">
-                            Free
-                        </h4>
-                    </div>
-                    <div class="card-body">
-                        <h1 class="card-title pricing-card-title">
-                            $0
-                            <small class="text-muted">
-                                / mo
-                            </small>
-                        </h1>
-                        <ul class="list-unstyled mt-3 mb-4">
-                            <li>
-                                10 users included
-                            </li>
-                            <li>
-                                2 GB of storage
-                            </li>
-                            <li>
-                                Email support
-                            </li>
-                            <li>
-                                Help center access
-                            </li>
-                        </ul>
-                        <button id="btn-1" class="btn btn-lg btn-block btn-outline-primary" type="button">
-                            Sign up for free
-                        </button>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-header">
-                        <h4 class="card-title font-weight-normal">
-                            Pro
-                        </h4>
-                    </div>
-                    <div class="card-body">
-                        <h1 class="card-title pricing-card-title">
-                            $15
-                            <small class="text-muted">
-                                / mo
-                            </small>
-                        </h1>
-                        <ul class="list-unstyled mt-3 mb-4">
-                            <li>
-                                20 users included
-                            </li>
-                            <li>
-                                10 GB of storage
-                            </li>
-                            <li>
-                                Priority email support
-                            </li>
-                            <li>
-                                Help center access
-                            </li>
-                        </ul>
-                        <button id="btn-2" class="btn btn-lg btn-block btn-primary" type="button">
-                            Get started
-                        </button>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-header">
-                        <h4 class="card-title font-weight-normal">
-                            Enterprise
-                        </h4>
-                    </div>
-                    <div class="card-body">
-                        <h1 class="card-title pricing-card-title">
-                            $29
-                            <small class="text-muted">
-                                / mo
-                            </small>
-                        </h1>
-                        <ul class="list-unstyled mt-3 mb-4">
-                            <li>
-                                30 users included
-                            </li>
-                            <li>
-                                15 GB of storage
-                            </li>
-                            <li>
-                                Phone and email support
-                            </li>
-                            <li>
-                                Help center access
-                            </li>
-                        </ul>
-                        <button id="btn-3" class="btn btn-lg btn-block btn-primary" type="button">
-                            Get started
-                        </button>
-                    </div>
+        <div class="container-fluid">
+            <div class="row primeiro-bloco">
+                <div class="col-sm">
+                    <h1 class="text-white text-center">
+                        Diego Versali
+                    </h1>
+                    <p class="text-white text-center">
+                        Actor
+                    </p>
                 </div>
             </div>
-            <footer class="pt-4 my-md-5 pt-md-5 border-top">
-                <div class="row text-center">
-                    <div class="col-12 col-md">
-                            <small class="d-block mb-3 text-muted">
-                                © 2017-2018
-                            </small>
-                        </img>
-                    </div>
-                    <div class="col-4 col-md">
-                        <h5>
-                            Features
-                        </h5>
-                        <ul class="list-unstyled text-small">
-                            <li>
-                                <a class="text-muted" href="#">
-                                    Cool stuff
-                                </a>
-                            </li>
-                            <li>
-                                <a class="text-muted" href="#">
-                                    Random feature
-                                </a>
-                            </li>
-                            <li>
-                                <a class="text-muted" href="#">
-                                    Team feature
-                                </a>
-                            </li>
-                            <li>
-                                <a class="text-muted" href="#">
-                                    Stuff for developers
-                                </a>
-                            </li>
-                            <li>
-                                <a class="text-muted" href="#">
-                                    Another one
-                                </a>
-                            </li>
-                            <li>
-                                <a class="text-muted" href="#">
-                                    Last time
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-4 col-md">
-                        <h5>
-                            Resources
-                        </h5>
-                        <ul class="list-unstyled text-small">
-                            <li>
-                                <a class="text-muted" href="#">
-                                    Resource
-                                </a>
-                            </li>
-                            <li>
-                                <a class="text-muted" href="#">
-                                    Resource name
-                                </a>
-                            </li>
-                            <li>
-                                <a class="text-muted" href="#">
-                                    Another resource
-                                </a>
-                            </li>
-                            <li>
-                                <a class="text-muted" href="#">
-                                    Final resource
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-4 col-md">
-                        <h5>
-                            About
-                        </h5>
-                        <ul class="list-unstyled text-small">
-                            <li>
-                                <a class="text-muted" href="#">
-                                    Team
-                                </a>
-                            </li>
-                            <li>
-                                <a class="text-muted" href="#">
-                                    Locations
-                                </a>
-                            </li>
-                            <li>
-                                <a class="text-muted" href="#">
-                                    Privacy
-                                </a>
-                            </li>
-                            <li>
-                                <a class="text-muted" href="#">
-                                    Terms
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </footer>
         </div>
-         <script src="scripts.js" type="text/javascript"></script>
-
+        <div class="container">
+            <div class="row segundo-bloco">
+                <div class="col-sm">
+                    <h1 class="text-center">
+                        Welcome!
+                    </h1>
+                    <p class="text-center">
+                        Diego is a Brazilian actor, who acts on cinema, TV and theater.
+                    </p>
+                    <hr>
+                        <h1 class="text-center">
+                            Gallery
+                        </h1>
+                    </hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 p-3">
+                    <img alt="imagem" class="img-fluid" src="https://source.unsplash.com/random/500x500">
+                    </img>
+                </div>
+                <div class="col-md-4 p-3">
+                    <img alt="imagem" class="img-fluid" src="https://source.unsplash.com/random/500x500">
+                    </img>
+                </div>
+                <div class="col-md-4 p-3">
+                    <img alt="imagem" class="img-fluid" src="https://source.unsplash.com/random/500x500">
+                    </img>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 p-3">
+                    <img alt="imagem" class="img-fluid" src="https://source.unsplash.com/random/500x500">
+                    </img>
+                </div>
+                <div class="col-md-4 p-3">
+                    <img alt="imagem" class="img-fluid" src="https://source.unsplash.com/random/500x500">
+                    </img>
+                </div>
+                <div class="col-md-4 p-3">
+                    <img alt="imagem" class="img-fluid" src="https://source.unsplash.com/random/500x500">
+                    </img>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid" id="bg">
+            <div class="container">
+                <div class="terceiro-bloco row">
+                    <div class="col-md-4 p-5 box-image">
+                        <img class="img-fluid" src="https://source.unsplash.com/random/500x500">
+                        
+                    </div>
+                    <div class="col-md-8 alinhamento">
+                    	<h3>Whatever</h3>
+                    	<p>Just something boring to become something readable</p>
+                    	<button type="button" class="btn btn-outline-primary">Contact Me</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
+<script src="scripts.js" type="text/javascript">
+</script>
