--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
                 Document
             </title>
             <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-                <link href="style.css" rel="stylesheet">
-                </link>
-            </link>
+            <link href="style.css" rel="stylesheet">
+            <script
+  src="https://code.jquery.com/jquery-1.12.4.js"
+  integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
+  crossorigin="anonymous"></script>    
         </meta>
     </head>
     <body>
