--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         </meta>
     </head>
     <body>
-        <div class="container-fluid">
-            <div class="row primeiro-bloco">
+        <div class="container-fluid text-center">
+            <div class="row primeiro-bloco align-items-end">
                 <div class="col-md">
-                    <h1 class="text-white text-center">
+                    <h1 class="text-white">
                         Diego Versali
                     </h1>
-                    <p class="text-white text-center">
+                    <p class="text-white">
                         Ator
                     </p>
                 </div>
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="row segundo-bloco">
                 <div class="col-md">
-                    <h1 class="text-center">
+                    <h1 class="text-center p-4">
                         Bem-vindo!
                     </h1>
                     <p class="text-center">
